<resources>
    <string name="app_name">KitabSawtiTest</string>
    <string name="text_introduction">Overview</string>
    <string name="text_education">Education</string>
    <string name="text_work">Work</string>
    <string name="text_skills">Skills</string>
    <string name="about_me">About Me</string>
    <string name="text_contact">Contact</string>
    <string name="text_duration">Duration</string>
    <string name="text_institution">Institution</string>
    <string name="text_degree">Degree</string>
    <string name="text_company">Company</string>
    <string name="text_working_duration">Working Duration</string>
    <string name="text_responsibility">Responsibility</string>
    <string name="text_programming">Programming</string>
    <string name="text_framework">Framework Libraries</string>
    <string name="architecture">Android Architecture Components</string>
    <string name="software">Software Methodologies</string>
    <string name="ides">IDES</string>
    <string name="Linkedin">Linkedin</string>
    <string name="gmail">Gmail</string>
    <string name="phone_number">Phone Number</string>
    <string name="education_information">Education</string>
    <string name="university_subject">Subjects</string>
    <string name="computers_science">Computer Science</string>
    <string name="data_structure">Data Structure</string>
    <string name="texnicall_skills">Skills</string>
    <string name="programming_skills">Programming Skills</string>
    <string name="work_experience">Working Experience</string>
    <string name="contact_number">Contact Number</string>

</resources>
